# arbitrage-bot

./: Cargo.toml
bot/: Cargo.toml
bot/src/: main.rs
feedhandler/: Cargo.toml
feedhandler/src/: clients.rs  lib.rs  main.rs
feedhandler/src/exchange/: coinbase.rs  exchange.rs  gemini.rs  mod.rs
