[package]
name = "bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
feedhandler = { path = "../feedhandler" }

tokio = { version = "1", features = ["full"] }

url = "2.2.2"
tungstenite = { version = "*", features = ["native-tls"]}

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.103"