[package]
name = "feedhandler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = { version = "*", features = ["native-tls"]}
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
url = "2.2.2"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.103"
